2010-08-14  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        XSLTProcessor.transformToFragment should not pass contextElement to html/xml document parsers
        https://bugs.webkit.org/show_bug.cgi?id=44017

        This fixes two tests which otherwise would fail when the
        HTML5 TreeBuilder is enabled for fragment parsing.

        This revealed a bug in HTMLTreeBuilder() which I fixed as well.

        * html/HTMLTreeBuilder.cpp:
        (WebCore::HTMLTreeBuilder::HTMLTreeBuilder):
        * xml/XSLTProcessor.cpp:
        (WebCore::createFragmentFromSource):

2010-08-14  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Ariya Hidayat.

        [Qt] Path: Fast approximation of stroke bounding rects
        https://bugs.webkit.org/show_bug.cgi?id=44014

        * platform/graphics/qt/PathQt.cpp:
        (WebCore::Path::strokeBoundingRect): Use QPainterPath::controlPointRect()
        to calculate a slightly larger bounding rect in a fraction of the time.

2010-08-14  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Move innerHTML off of Range::createContextualFragment
        https://bugs.webkit.org/show_bug.cgi?id=44011

        This makes all the editing tests stop failing under the
        HTML5 TreeBuilder.

        In a previous patch Adam disabled some of the (wrong) code
        in createContextualFragment when in html5 treebuilder mode.
        The problem is that the editing code depends on
        createContextualFragment (as well as the Range DOM API),
        so we have to leave this code in until we can figure
        out if it's right or wrong behavior for the Range API.

        This patch moves innerHTML/outerHTML off of using
        createContextualFragment and instead calls
        DocumentFragment::parseHTML directly (which is much simpler).

        I expect Adam and I will end up turning on the HTML5 TreeBuilder