@@ -1,3 +1,14 @@
+2010-08-14  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r65374.
+        http://trac.webkit.org/changeset/65374
+        https://bugs.webkit.org/show_bug.cgi?id=44018
+
+        broke a myriad of svg tests (Requested by kling on #webkit).
+
+        * platform/graphics/qt/PathQt.cpp:
+        (WebCore::Path::strokeBoundingRect):
+
 2010-08-14  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Adam Barth.
